# Perimeter

./: .gitignore  README.md  pyproject.toml
src/perimeter/: __init__.py  analysis.py  cli.py  nmap_parser.py  nmap_runner.py  storage.py  trend.py
src/perimeter/report/: scan.xml
tests/: verification.py
